--- a/frontend/src/components/Homepage/homepage.css
+++ b/frontend/src/components/Homepage/homepage.css
@@ -43,14 +43,14 @@
     85% {
         letter-spacing: 8px;
         margin-bottom: -40px;
-        color: white
+        color: lightskyblue
     }
 }
 
 .mainBtn {
     position: relative;
     left: 74%;
-    margin-top: 50%;
+    margin-top: 43%;
     display: inline-block;
     width: 277px;
     height: 50px;
@@ -132,8 +132,8 @@ h1 {
 }
 
 h1 span {
-    font-size: 30px;
-    margin-left: 15px;
+    font-size: 50px;
+    margin-left: -1px;
     color: black;
 }
 
